@@ -6,7 +6,7 @@ Core changes:
 - fixed message when failed to write battery file (previously always saying
   failure to open file NULL)
 Windows version:
-- automatically apply IPS patch if it exists
+- automatically apply IPS patch if it exists (configurable)
 - added save/load support in the memory viewer
 - memory viewer now displays current edit address
 - removed some test code introduced at version 1.1 that slows down the emulator
